# Compilatori-2-assignment

./: IdentityEliminationPass.cpp  TestPass.cpp  input.ll
Assigment 1/Multi-Instruction-Optimization/: CMakeLists.txt  comandi.txt
Assigment 1/Multi-Instruction-Optimization/test/: output.ll  testmlo2.ll  testmlo3.ll
Assignment 1/IdentityElimination/: comandi.txt  note.txt
Assignment 1/IdentityElimination/test/: output.ll  test.ll
Assignment 1/Multi-Instruction-Optimization/: MultiInstOpts.cpp  Note.txt  comandi.txt
Assignment 1/Multi-Instruction-Optimization/test/: output.ll  test.ll
Assignment 1/StrenghtReduction/: StrengthReductionPass.cpp  comandi.txt  note.txt
Assignment 1/StrenghtReduction/test/: output.ll  test.ll
Assignment 3/: CodeMotionPass.cpp  comandi.txt  input.ll
Assignment 3/test/: input.ll  output.ll
